[gd_scene load_steps=2 format=3 uid="uid://b2vhq8xp5nk7w"]

[ext_resource type="Script" path="res://scripts/ui/settings_controller.gd" id="1_settings"]

[node name="SettingsMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_settings")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="MainPanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="CloseButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="TabContainer" type="TabContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Audio" type="MarginContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="AudioSettings" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MasterVolume" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/MasterVolume"]
layout_mode = 2
text = "Master Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/MasterVolume"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/MasterVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"

[node name="MusicVolume" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/MusicVolume"]
layout_mode = 2
text = "Music Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/MusicVolume"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.8

[node name="ValueLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/MusicVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "80%"

[node name="SFXVolume" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/SFXVolume"]
layout_mode = 2
text = "SFX Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/SFXVolume"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/SFXVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "100%"

[node name="AmbientVolume" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/AmbientVolume"]
layout_mode = 2
text = "Ambient Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/AmbientVolume"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/AmbientVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.6

[node name="ValueLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Audio/AudioSettings/AmbientVolume"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "60%"

[node name="Display" type="MarginContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DisplaySettings" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Display"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="FullscreenToggle" type="CheckBox" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Display/DisplaySettings"]
layout_mode = 2
text = "Fullscreen"

[node name="VSyncToggle" type="CheckBox" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Display/DisplaySettings"]
layout_mode = 2
button_pressed = true
text = "VSync"

[node name="ResolutionLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Display/DisplaySettings"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Display/DisplaySettings"]
layout_mode = 2

[node name="Gameplay" type="MarginContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GameplaySettings" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="AutosaveToggle" type="CheckBox" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Gameplay/GameplaySettings"]
layout_mode = 2
button_pressed = true
text = "Auto-save"

[node name="GameSpeed" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Gameplay/GameplaySettings"]
layout_mode = 2

[node name="Label" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Gameplay/GameplaySettings/GameSpeed"]
layout_mode = 2
text = "Game Speed"

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Gameplay/GameplaySettings/GameSpeed"]
layout_mode = 2

[node name="Slider" type="HSlider" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Gameplay/GameplaySettings/GameSpeed"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="ValueLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TabContainer/Gameplay/GameplaySettings/GameSpeed"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "1.0x"

[node name="ButtonsContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="ApplyButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Apply"
